Feat: Added the switcher widget to Example1.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>ShapeShifter | R3R</title>
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <link
       href="https://fonts.googleapis.com/css?family=Comfortaa"
       rel="stylesheet"
     />
